studio-3781908744:~/studio{master}$ firebase deploy --only firestore:rul

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "drive-track-7027f"
-  }
+    "default": "drive-track-7027f",
+    "staging": "drive-track-7027f"
+  },
+  "targets": {},
+  "etags": {}
 }
