--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.3.1",
+    "firebase-functions": "^5.1.1",
     "genkit": "^1.14.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -79,3 +81,5 @@
     "typescript": "^5"
   }
 }
+
+    
