--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.2",
+    "@capacitor-firebase/authentication": "^7.0.0",
     "@capacitor/core": "^7.4.2",
     "@capacitor/ios": "^7.4.2",
     "@genkit-ai/googleai": "^1.14.1",
