feat: Complete iOS app setup with Google Sign-In, app icons, PDF generation, and help support
🚀 iOS App Store Ready Features:
- ✅ Google Sign-In with native Capacitor Firebase Authentication
- ✅ Email/password authentication working
- ✅ Complete app icon set (all required sizes, no alpha channels)
- ✅ Professional splash screens (light/dark mode)
- ✅ iPad orientation requirements for multitasking
- ✅ Firebase configuration with proper OAuth credentials

📱 Mobile PDF Generation System:
- ✅ React-PDF renderer for professional driving log PDFs
- ✅ Native file system integration (@capacitor/filesystem)
- ✅ Native sharing capabilities (@capacitor/share)
- ✅ Mobile-optimized PDF export with filtering options
- ✅ Automatic filename generation with date ranges
- ✅ Background processing and error handling

🎨 App Icons & Assets:
- ✅ All iOS icon sizes generated (20pt-1024pt)
- ✅ RGB format icons (no transparency for App Store)
- ✅ PWA icons for web compatibility
- ✅ Splash screens with Drive-Track branding

🔧 Enhanced Features:
- ✅ Help & Support section in profile with hello@drive-track.com
- ✅ Pre-filled email templates for support and feedback
- ✅ Mobile-responsive design improvements
- ✅ Authentication state management enhancements

📦 Capacitor Plugins Added:
- @capacitor/filesystem@7.1.4
- @capacitor/share@7.0.2
- @react-pdf/renderer for PDF generation

🎯 Ready For:
- App Store submission with complete icon set
- Production deployment on iOS devices
- Professional PDF export for driving instructors
- Native mobile user experience

--- a/ios/App/GoogleService-Info.plist
+++ b/ios/App/GoogleService-Info.plist
@@ -2,8 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>94983186341-2l6q8pvubmvqohaln0kftft7ucir6rtm.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.94983186341-2l6q8pvubmvqohaln0kftft7ucir6rtm</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCjNqgaLkmO63zOlgU0XwPduuNOdDy1D7k</string>
+	<string>AIzaSyB3npZXCQr22JNdZ_M8uIvSg-aWlzjV2_k</string>
 	<key>GCM_SENDER_ID</key>
 	<string>94983186341</string>
 	<key>PLIST_VERSION</key>
@@ -25,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:94983186341:ios:8f5205b1df8a48ae66ea4c</string>
-	<key>DATABASE_URL</key>
-	<string>https://drive-track-7027f-default-rtdb.firebaseio.com</string>
+	<string>1:94983186341:ios:d7f49d7b07fdd01166ea4c</string>
 </dict>
 </plist>
