--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "dependencies": {
     "@babel/runtime": "^7.28.2",
     "@capacitor-firebase/authentication": "^7.3.0",
+    "@capacitor-firebase/firestore": "^7.3.0",
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
+    "@capacitor/filesystem": "^7.1.4",
+    "@capacitor/geolocation": "^7.1.5",
     "@capacitor/ios": "^7.4.2",
+    "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "^7.0.2",
     "@genkit-ai/googleai": "^1.14.1",
     "@genkit-ai/next": "^1.14.1",
@@ -45,6 +49,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-pdf/renderer": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -68,6 +73,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
