Fix iOS mailto links with Capacitor Browser plugin
- Install @capacitor/browser plugin for native URL handling
- Create useEmailSupport hook with robust email functionality
- Replace window.open() mailto calls with Browser.open()
- Add clipboard fallback for email copying
- Update profile page email buttons with improved error handling
- Configure Browser plugin in capacitor.config.ts
- Sync iOS project with new plugin

Resolves iOS error: 'Failed to open URL mailto:hello@drive-track.com'

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/runtime": "^7.28.2",
     "@capacitor-firebase/authentication": "^7.3.0",
     "@capacitor-firebase/firestore": "^7.3.0",
+    "@capacitor/browser": "^7.0.2",
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/filesystem": "^7.1.4",
