--- a/package.json
+++ b/package.json
@@ -59,9 +59,8 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-tools": "^14.12.1",
     "genkit": "^1.14.1",
-    "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "react": "^18.3.1",
